# riscv-simenv

./: .gitignore  LICENSE  README.md  pyproject.toml
SimEnvControl/: app_repo_addckpt.py  app_repo_addsysroot.py  app_repo_cli.py  app_repo_init.py  app_repo_learn.py  app_repo_subrepo.py  sim_env_addsysroot.py  sim_env_analysis.py  sim_env_cli.py  sim_env_learn.py  sim_env_list.py  sim_env_mkgen.py  sim_env_show.py  sim_env_spawn.py  sim_env_verify.py
SimEnvControl/admin_cmd/: __init__.py  subrepo.py
SimEnvControl/admin_cmd/add/: __init__.py  sysroot.py
SimEnvControl/admin_cmd/add/app/: app_analyze.py  app_register.py
SimEnvControl/admin_cmd/remove/: __init__.py  sysroot.py
SimEnvControl/admin_cmd/show/: manifest.py  sysroot.py
SimEnvControl/libsimenv/: app_manifest.py  autocomplete.py  checkpoints_db.py  checkpoints_globber.py  click_bash42_completion.py  content_manager.py  manifest_db.py  repo_path.py  shcmd_utils.py  spec_bench_name.py  stdin_file_extractor.py  sysroots_db.py  utils.py
SimEnvControl/libsimenv/makefile_generator/: Makefile.template  makefile_generator.py
SimEnvControl/libsimenv/template_manager/: Makefile.template  bootstrap-make-recipes.template
SimEnvControl/user_cmd/: list.py  mkgen.py  spawn.py  verify.py
SyscallAnalysis/archived/: strace_verifier.py
SyscallAnalysis/libsyscall/: target_path_converter.py
SyscallAnalysis/libsyscall/analyzer/: check_scall.py  fd_tracker.py  file_usage.py  scall_trace_analyzer.py  strace_parser.py  syscall_trace_constructor.py
SyscallAnalysis/libsyscall/syscalls/: factory.py  sys_chdir.py  sys_close.py  sys_exit.py  sys_faccessat.py  sys_fcntl.py  sys_fstat.py  sys_fstatat.py  sys_ftruncate.py  sys_getcwd.py  sys_getdents64.py  sys_getmainvars.py  sys_getrandom.py  sys_linkat.py  sys_lseek.py  sys_lstat.py  sys_mkdirat.py  sys_openat.py  sys_pread.py  sys_pwrite.py  sys_read.py  sys_readlinkat.py  sys_renameat2.py  sys_unlinkat.py  sys_write.py  syscall.py
SyscallAnalysis/test/: file_usage_stat.py  scall_instance_construction.py  scall_trace_analyzer_readin.py  strace
debug_entry/: activate_completion.source  atool_sim_env_analysis.py  atool_sim_env_learn.py  atool_sim_env_spawn.py  atool_sim_env_verify.py  atool_simenv.py  pint_all_abs_path_ref.py  riscv-app-repo  riscv-simenv
debug_entry/test/: test.sh
riscv_simenv/SimEnvControl/admin_cmd/: initrepo.py  subrepo.py
riscv_simenv/SimEnvControl/admin_cmd/add/: checkpoint.py
riscv_simenv/SimEnvControl/admin_cmd/remove/: checkpoint.py  manifest.py  sysroot.py
riscv_simenv/SimEnvControl/admin_cmd/show/: __init__.py  checkpoint.py  manifest.py  sysroot.py
riscv_simenv/SimEnvControl/libsimenv/: app_manifest.py  autocomplete.py  checkpoints_db.py  content_manager.py  manifest_db.py  repo_path.py  utils.py
riscv_simenv/SimEnvControl/libsimenv/template_manager/: __init__.py  bootstrap-make-recipes.template
riscv_simenv/SimEnvControl/user_cmd/: list.py  mkgen.py  spawn.py  verify.py
riscv_simenv/SyscallAnalysis/test/: file_usage_stat.py  scall_trace_analyzer_readin.py
(+14 files in other folders)
