[tool.poetry]
name = "riscv-simenv"
version = "0.7.0"
description = "A tool to reliably pack and spawn a RISC-V workload (app) for simulation."
authors = ["Jiayang Li <jli95@ncsu.edu>"]
license = "Other/Proprietary License"
repository = "https://github.com/s117/riscv-simenv.git"
readme = "README.md"
keywords = ["riscv", "simenv", "anycore"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
]
packages = [
    { include = "SimEnvControl" },
    { include = "SyscallAnalysis" },
]
exclude = [
    "debug_entry",
]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^6.0.1"
click = "^8.0.4"
pyparsing = "^3.0.7"
bashlex = "^0.16"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
natsort = "^8.1.0"

[tool.poetry.dev-dependencies]
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
riscv-simenv = "SimEnvControl.sim_env_cli:cli"
riscv-app-repo = "SimEnvControl.app_repo_cli:cli"
